[package]
name = "riscv"
version = "0.5.4"
repository = "https://github.com/rust-embedded/riscv"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to RISC-V processors"
keywords = ["riscv", "register", "peripheral"]
license = "ISC"

[dependencies]
bit_field = "0.10.0"
mutex-trait = { git = "https://github.com/rust-embedded/mutex-trait.git" }

[features]
inline-asm = []